# webgpu-gltf-viewer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/environments/: helipad_irradiance.hdr
assets/shaders/: basic.wgsl  environment.wgsl  environment_prefilter.wgsl  gltf_pbr.wgsl  irradiance_map.wgsl  mipmap_downsample_render.wgsl  mipmap_generator_2d.wgsl  mipmap_generator_cube.wgsl
scripts/: build.py
src/: application.cpp  application.h  camera.cpp  camera.h  environment.cpp  environment.h  environment_preprocessor.cpp  environment_preprocessor.h  float16.cpp  float16.h  main.cpp  mesh_utils.cpp  mesh_utils.h  mipmap_generator.cpp  mipmap_generator.h  model.cpp  model.h  orbit_controls.cpp  orbit_controls.h  panorama_to_cubemap_converter.cpp  panorama_to_cubemap_converter.h  renderer.cpp  renderer.h
